<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <!--    Download col-->
    <LinearLayout
        android:id="@+id/block_download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/label_download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/download"
            android:textAppearance="@style/headline_3"
            android:textColor="@color/neutral_100" />

        <TextView
            android:id="@+id/value_download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/empty"
            android:textAppearance="@style/headline_4"
            android:textColor="@color/neutral_100" />

        <TextView
            android:id="@+id/caption_download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/mbps"
            android:textAppearance="@style/subtitle_1"
            android:textColor="@color/neutral_100" />
    </LinearLayout>

    <!--    Upload col-->
    <LinearLayout
        android:id="@+id/block_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_toEndOf="@+id/block_download"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/label_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/upload"
            android:textAppearance="@style/headline_3"
            android:textColor="@color/neutral_100" />

        <TextView
            android:id="@+id/value_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/empty"
            android:textAppearance="@style/headline_4"
            android:textColor="@color/neutral_100" />

        <TextView
            android:id="@+id/caption_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/mbps"
            android:textAppearance="@style/subtitle_1"
            android:textColor="@color/neutral_100" />
    </LinearLayout>


</LinearLayout>
