<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.scoltech.openran.speedtest.activities.DemoActivity">


    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ru.scoltech.openran.speedtest.customViews.HeaderView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:is_active_back="false"
            app:is_active_button_group="true"
            app:section_name="SpeedTest 5G" />

        <ru.scoltech.openran.speedtest.customViews.CardView
            android:id="@+id/card"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="30dp"

            android:visibility="gone" />

        <ru.scoltech.openran.speedtest.customViews.ResultView

            android:id="@+id/result"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center"

            android:layout_marginStart="20dp"

            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:visibility="gone" />

        <ru.scoltech.openran.speedtest.customViews.SubResultView
            android:id="@+id/subresult"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="30dp"
            android:gravity="center"

            android:visibility="gone" />

        <TextView
            android:id="@+id/action_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center"
            android:layout_marginTop="130dp"

            android:text="@string/tap_to_start_session" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ru.scoltech.openran.speedtest.customButtons.SaveButton
                android:id="@+id/save_btn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:visibility="gone" />

            <ru.scoltech.openran.speedtest.customButtons.ActionButton
                android:id="@+id/action_btn"

                android:layout_width="100dp"
                android:layout_height="100dp"

                android:layout_gravity="center"
                android:layout_marginHorizontal="20dp"


                android:background="@drawable/ic_play"

                android:contentDescription="@string/start"
                android:onClick="onClick" />

            <ru.scoltech.openran.speedtest.customButtons.ShareButton
                android:id="@+id/share_btn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:visibility="gone" />


        </LinearLayout>

        <RelativeLayout
            android:id="@+id/start_screen_settings"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/main_address_hint"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.3"
                        android:text="@string/main_address_hint"
                        android:textColor="@color/neutral_60"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/main_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:inputType="textPersonName"
                        android:text="@string/default_main_address"
                        android:textColor="@color/neutral_60"
                        android:textSize="14sp" />
                </LinearLayout>

                <RadioGroup
                    android:id="@+id/mode_radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <RadioButton
                        android:id="@+id/balancer_mode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/neutral_60"
                        android:checked="true"
                        android:minHeight="30dp"
                        android:text="@string/balancer_mode"
                        android:textColor="@color/neutral_60"
                        android:textSize="14sp" />

                    <RadioButton
                        android:id="@+id/direct_mode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/neutral_60"
                        android:checked="false"
                        android:minHeight="30dp"
                        android:text="@string/direct_iperf_mode"
                        android:textColor="@color/neutral_60"
                        android:textSize="14sp" />
                </RadioGroup>

            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>