<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/deviceIpText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/deviceIp"/>

            <Button
                android:id="@+id/refreshButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/refreshIp" />

            <Button
                android:id="@+id/hideCollapseButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hideIp" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="155dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/ipInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:scrollbars="vertical"/>
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight=".5" />


            <EditText
                android:id="@+id/iperfArgs"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:ems="10"
                android:importantForAutofill="no"

                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.85" />

            <Button
                android:id="@+id/startStopButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.15"
                android:text="@string/startIperf" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/iperfOutput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:scrollbars="vertical" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>