<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"

            android:text="@string/download_speed"
            android:textAppearance="@style/subtitle_1" />

        <TextView
            android:id="@+id/download_value_res"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"

            android:text="234.34"
            android:textAppearance="@style/headline_4" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"

            android:text="@string/mbps"
            android:textAppearance="@style/subtitle_1" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="Upload speed"

            android:textAppearance="@style/subtitle_1" />

        <TextView
            android:id="@+id/upload_value_res"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="234.34"

            android:textAppearance="@style/headline_4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/mbps"

            android:textAppearance="@style/subtitle_1" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="Ping"

            android:textAppearance="@style/subtitle_1" />

        <TextView
            android:id="@+id/ping_value_res"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="23"
            android:textAppearance="@style/headline_4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/ms"

            android:textAppearance="@style/subtitle_1" />
    </TableRow>

</TableLayout>
